--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
         <android.support.design.widget.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="ScrollView" />
+            android:text="水平滚动" />
     </android.support.design.widget.TabLayout>
 
 </LinearLayout>
