--- a/app/src/main/res/layout/activity_recyclerview_horizontal.xml
+++ b/app/src/main/res/layout/activity_recyclerview_horizontal.xml
@@ -21,15 +21,14 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center_horizontal|right"
-            android:paddingTop="10dp"
+            android:paddingRight="10dp"
             android:src="@mipmap/ic_launcher" />
     </FrameLayout>
 
     <cn.forward.overscroll.view.OverScrollHorizontalRecyclerView
         android:id="@+id/overscroll_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#0ff" />
+        android:layout_height="match_parent" />
 
 
 </android.support.design.widget.CoordinatorLayout>
