--- a/app/src/main/res/layout/activity_recyclerview_vertical.xml
+++ b/app/src/main/res/layout/activity_recyclerview_vertical.xml
@@ -22,7 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal|bottom"
-            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
             android:src="@mipmap/ic_launcher" />
     </FrameLayout>
 
