--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="嵌套滚动" />
+
+<!--
+        <android.support.design.widget.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="test" />
+-->
+
     </android.support.design.widget.TabLayout>
 
 </LinearLayout>
